--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
 
 
 
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -41,6 +43,8 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.1.1
   sqlite3_flutter_libs: ^0.5.17
+  intl: ^0.17.0
+  images_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
